--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.2.9",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
