--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "firebase": "^8.2.9",
     "firebase-admin": "^9.5.0",
+    "firebase-tools": "^9.5.0",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
