--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "firebase": "^8.2.9",
     "firebase-admin": "^9.5.0",
     "firebase-tools": "^9.5.0",
     "next": "latest",
+    "nodemailer": "^6.5.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
@@ -22,4 +25,3 @@
   },
   "license": "MIT"
 }
-
